--- a/writerside.cfg
+++ b/writerside.cfg
@@ -4,5 +4,6 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
+    <api-specifications dir="specifications"/>
     <instance src="mash.tree" web-path="/mesh/"/>
 </ihp>
